[tool.poetry]
name = "Autotest"
version = "1.0"
description = "AutoTest for CICD"
authors = ["SPBU-QA"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.1"
requests = "^2.19.0"
urllib3 = "^1.15.1"
flask = "^1.1.2"
werkzeug = "^0.16.0"
jinja2 = "3.0.3"
itsdangerous = "2.0.1"
Flask-APScheduler = "^1.12.1"
Flask-Migrate = "^2.7.0"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^19.9.0"
SQLAlchemy = "^1.3.23"
flask-apidoc = "^1.3.0"
flask-redis = "^0.4.0"
flask-script = "^2.0.6"
flask_cors = "^1.10.3"
psycopg2-binary = "^2.9.1"
gevent = "^22.10.2"
celery = "^4.4.0"
redis = "^4.6.0"
billiard = "^3.6.3.0"
flower="^0.9.7"
paramiko = "^2.11.0"
pyyaml = "^6.0"
pytest-variables = "^2.0.0"
pyecharts = "^2.0.2"
numpy = "^1.23.1"
paramiko-expect = "^0.3.5"
pycryptodome = "^3.17"
pyjwt = "^2.8.0"
requests-toolbelt = "^1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
